test/sh/error/flow/stmt_between_elif.sk
if true {
	noop
}
x := 1
elif true {
	noop
}
